--- a/.github/workflows/0-start.yml
+++ b/.github/workflows/0-start.yml
@@ -64,7 +64,7 @@ jobs:
           git commit --message="Update game over message"
 
           echo "Push"
-          git push origin $BRANCH
+          git push -f origin $BRANCH
 
           echo "Make a pull request"
           # Reference https://cli.github.com/manual/gh_pr_create
